--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,22 +32,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout repo
       - uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version: 20
+          bun-version: latest
 
       - name: Install deps
         working-directory: frontend
-        run: npm ci
+        run: bun install --frozen-lockfile
 
       - name: Run tests
         working-directory: frontend
-        run: npm test -- --runInBand
+        run: bun test
 
       - name: Build frontend
         working-directory: frontend
-        run: npm run build
+        run: bun run build
 
