--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,13 +36,13 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+        uses: oven-sh/setup-bun@v2
         with:
-          bun-version: latest
+          version: "latest"
 
       - name: Install deps
         working-directory: frontend
-        run: bun install --frozen-lockfile
+        run: bun install
 
       - name: Run tests
         working-directory: frontend
