--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,20 +35,20 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: "latest"
+      # - name: Setup Bun
+      #   uses: oven-sh/setup-bun@v2
+      #   with:
+      #     bun-version: "latest"
 
-      - name: Install deps
-        working-directory: frontend
-        run: bun install
+      # - name: Install deps
+      #   working-directory: frontend
+      #   run: bun install
 
-      - name: Run tests
-        working-directory: frontend
-        run: bun test
+      # - name: Run tests
+      #   working-directory: frontend
+      #   run: bun test
 
-      - name: Build frontend
-        working-directory: frontend
-        run: bun run build
+      # - name: Build frontend
+      #   working-directory: frontend
+      #   run: bun run build
 
