restore initial job

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,8 @@ name: CI
 
 on:
   push:
-    branches: [ "*" ]
-  pull_request: [ "*" ]
+    branches: [ main, develop ]
+  pull_request:
 
 jobs:
   backend:
@@ -28,27 +28,25 @@ jobs:
         working-directory: backend
         run: pytest
 
-  # frontend:
-  #   runs-on: ubuntu-latest
+  frontend:
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Checkout repo
-  #       uses: actions/checkout@v4
+    steps:
+      - uses: actions/checkout@v4
 
-      # - name: Setup Bun
-      #   uses: oven-sh/setup-bun@v2
-      #   with:
-      #     bun-version: "latest"
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-      # - name: Install deps
-      #   working-directory: frontend
-      #   run: bun install
+      - name: Install deps
+        working-directory: frontend
+        run: npm ci
 
-      # - name: Run tests
-      #   working-directory: frontend
-      #   run: bun test
+      - name: Run tests
+        working-directory: frontend
+        run: npm test -- --runInBand
 
-      # - name: Build frontend
-      #   working-directory: frontend
-      #   run: bun run build
-
+      - name: Build frontend
+        working-directory: frontend
+        run: npm run build
