--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [ main, develop ]
   pull_request:
+    branches: [ "*" ]
 
 jobs:
   backend:
@@ -34,19 +35,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2 // [!code ++]
         with:
-          node-version: 20
+          version: "latest" # or "canary" #
 
-      - name: Install deps
+      - name: Install dependencies
         working-directory: frontend
-        run: npm ci
+        run: bun install
 
       - name: Run tests
         working-directory: frontend
-        run: npm test -- --runInBand
+        run: bun test
 
       - name: Build frontend
         working-directory: frontend
-        run: npm run build
+        run: bun run build
