--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v2 // [!code ++]
+        uses: oven-sh/setup-bun@v1
         with:
           version: "latest" # or "canary" #
 
